--- a/contactmanagmentAPI/appsettings.json
+++ b/contactmanagmentAPI/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Data": {
+      "ContactList": "contactslist.json"
+    },
   "AllowedHosts": "*"
 }
