updated project architecture
updated project architecture

--- a/contactmanagmentAPI/appsettings.json
+++ b/contactmanagmentAPI/appsettings.json
@@ -5,7 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "Data": {
+  "ContactData": {
       "ContactList": "contactslist.json"
     },
   "AllowedHosts": "*"
